--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '*/30 * * * *' # Runs every day at 12:00 UTC
+    - cron: '*/30 * * * *' # Runs every 30 mins
   workflow_dispatch: # lets you manually trigger it too
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
       - name: Commit and Push
         run: |
           git config --global user.name "Bennnnip"
-          git config --global user.email "vissarut.prom@gmailcom"
+          git config --global user.email "vissarut.prom@gmail.com"
           git add .
           git commit -m "Daily update $(date)" || echo "Nothing to commit"
           git push
