--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
           echo "$(date)" >> update.log
 
       - name: Commit and Push
+        env:
+            GITHUB_TOKEN: ${{ secret.GITHUB_TOKEN }}
         run: |
           git config --global user.name "Bennnnip"
           git config --global user.email "vissarut.prom@gmail.com"
