--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Commit and Push
         env:
-            GITHUB_TOKEN: ${{ secret.GITHUB_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "Bennnnip"
           git config --global user.email "vissarut.prom@gmail.com"
