--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name "Bennnnip"
-          git config --global user.email "vissarut.prom@gmail.com"
+          git config --global user.name "Bennnto"
+          git config --global user.email "ben.promkaew@icloud.com"
           git add .
           git commit -m "Daily update $(date)" || echo "Nothing to commit"
           git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:main
